<resources>
    <string name="app_name">SimpleQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="memo_gk">Memo Gk</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="previous">Previous</string>
    <string name="time_left">Time Left :</string>
    <string name="time_sec">1</string>
    <string name="next">Next</string>
    <string name="score">Score</string>
    <string name="_10">10</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="_5">5</string>
    <string name="sample_text">What is Your Name</string>
    <string name="save">save</string>
</resources>